--- a/k8s-1.35-manifests/testing.yaml
+++ b/k8s-1.35-manifests/testing.yaml
@@ -2,30 +2,30 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: pub-site-dev
+  name: pub-site-staging
   labels:
-    name: pub-site-dev
+    name: pub-site-staging
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: pub-site
-  namespace: pub-site-dev
+  namespace: pub-site-staging
   labels:
     app: pub-site
-    environment: testing
+    environment: staging
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: pub-site
-      environment: testing
+      environment: staging
   template:
     metadata:
       labels:
         app: pub-site
-        environment: testing
+        environment: staging
     spec:
       containers:
       - name: pub-site
@@ -59,15 +59,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pub-site
-  namespace: pub-site-dev
+  namespace: pub-site-staging
   labels:
     app: pub-site
-    environment: testing
+    environment: staging
 spec:
   type: ClusterIP
   selector:
     app: pub-site
-    environment: testing
+    environment: staging
   ports:
   - port: 80
     targetPort: 80
@@ -79,17 +79,17 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: pub-site
-  namespace: pub-site-dev
+  namespace: pub-site-staging
 spec:
   parentRefs:
   - name: global-gateway
     namespace: nginx-gateway
-    sectionName: pub-site-dev
+    sectionName: pub-site-staging
   - name: global-gateway
     namespace: nginx-gateway
-    sectionName: pub-site-dev-http
+    sectionName: pub-site-staging-http
   hostnames:
-  - info-dev.dremer10.com
+  - info-staging.dremer10.com
   rules:
   - matches:
     - path:
