--- a/k8s-1.35-manifests/certificates.yaml
+++ b/k8s-1.35-manifests/certificates.yaml
@@ -16,15 +16,15 @@ spec:
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: pub-site-dev-cert
+  name: pub-site-staging-cert
   namespace: nginx-gateway
 spec:
-  secretName: pub-site-testing-tls
+  secretName: pub-site-staging-tls
   issuerRef:
     kind: ClusterIssuer
     name: letsencrypt-gateway
   dnsNames:
-  - info-dev.dremer10.com
+  - info-staging.dremer10.com
 
 ---
 apiVersion: cert-manager.io/v1
