--- a/k8s-1.35-manifests/testing.yaml
+++ b/k8s-1.35-manifests/testing.yaml
@@ -95,3 +95,27 @@ spec:
     backendRefs:
     - name: pub-site
       port: 80
+
+---
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: pub-site-http-redirect
+  namespace: pub-site-staging
+spec:
+  parentRefs:
+  - name: global-gateway
+    namespace: nginx-gateway
+    sectionName: acme-http
+  hostnames:
+  - info-staging.dremer10.com
+  rules:
+  - matches:
+    - path:
+        type: PathPrefix
+        value: /
+    filters:
+    - type: RequestRedirect
+      requestRedirect:
+        scheme: https
+        statusCode: 301
