--- a/k8s-1.35-manifests/quiz.yaml
+++ b/k8s-1.35-manifests/quiz.yaml
@@ -2,16 +2,16 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: quiz
+  name: quiz-prod
   labels:
-    name: quiz
+    name: quiz-prod
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: quiz
-  namespace: quiz
+  namespace: quiz-prod
   labels:
     app: quiz
     environment: production
@@ -59,7 +59,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: quiz
-  namespace: quiz
+  namespace: quiz-prod
   labels:
     app: quiz
     environment: production
@@ -79,7 +79,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: quiz
-  namespace: quiz
+  namespace: quiz-prod
 spec:
   parentRefs:
   - name: global-gateway
