--- a/k8s-1.35-manifests/global-gateway.yaml
+++ b/k8s-1.35-manifests/global-gateway.yaml
@@ -134,6 +134,18 @@ spec:
     allowedRoutes:
       namespaces:
         from: All
+  - name: quiz-staging
+    hostname: quiz-staging.dremer10.com
+    port: 443
+    protocol: HTTPS
+    tls:
+      mode: Terminate
+      certificateRefs:
+      - name: quiz-staging-tls
+        kind: Secret
+    allowedRoutes:
+      namespaces:
+        from: All
   - name: solar-dev
     hostname: solar-dev.dremer10.com
     port: 443
