fix dashboard depending on env

--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -21,6 +21,7 @@ permissions:
 env:
   IMAGE_NAME: ${{ vars.DOCKERHUB_USERNAME }}/pub-site
   VITE_QUIZ_TERMINAL_URL: ${{ vars.VITE_QUIZ_TERMINAL_URL }}
+  VITE_GRAFANA_DASHBOARD_URL: ${{ vars.VITE_GRAFANA_DASHBOARD_URL }}
   TERMINAL_IMAGE: ${{ vars.DOCKERHUB_USERNAME }}/quiz-terminal
 
 jobs:
@@ -136,6 +137,7 @@ jobs:
         cache-to: type=inline
         build-args: |
           VITE_QUIZ_TERMINAL_URL=${{ env.VITE_QUIZ_TERMINAL_URL }}
+          VITE_GRAFANA_DASHBOARD_URL=${{ env.VITE_GRAFANA_DASHBOARD_URL }}
           VITE_APP_VERSION=${{ steps.version.outputs.display_version }}
 
     - name: Build Docker image (quiz terminal)
@@ -440,8 +442,9 @@ jobs:
         set -euo pipefail
         RAW_BASE="https://raw.githubusercontent.com/${{ github.repository }}/${{ github.ref_name }}"
         MANIFEST_BASE="$RAW_BASE/k8s-1.35-manifests"
-          kubectl apply -f "$MANIFEST_BASE/default__prometheus-pvc.yaml"
-          kubectl apply -f "$MANIFEST_BASE/monitoring__grafana-pvc.yaml"
+          kubectl apply -f "$MANIFEST_BASE/monitoring-production__namespace.yaml"
+          kubectl apply -f "$MANIFEST_BASE/monitoring-production__prometheus-pvc.yaml"
+          kubectl apply -f "$MANIFEST_BASE/monitoring-production__grafana-pvc.yaml"
           kubectl apply -f "$MANIFEST_BASE/global-gateway.yaml"
           export GATEWAY_EXTERNAL_IP="${{ vars.GATEWAY_EXTERNAL_IP }}"
           tmp_gateway_svc="$(mktemp)"
@@ -493,8 +496,9 @@ jobs:
         set -euo pipefail
         RAW_BASE="https://raw.githubusercontent.com/${{ github.repository }}/${{ github.ref_name }}"
         MANIFEST_BASE="$RAW_BASE/k8s-1.35-manifests"
-          kubectl apply -f "$MANIFEST_BASE/default__prometheus-pvc.yaml"
-          kubectl apply -f "$MANIFEST_BASE/monitoring__grafana-pvc.yaml"
+          kubectl apply -f "$MANIFEST_BASE/monitoring-staging__namespace.yaml"
+          kubectl apply -f "$MANIFEST_BASE/monitoring-staging__prometheus-pvc.yaml"
+          kubectl apply -f "$MANIFEST_BASE/monitoring-staging__grafana-pvc.yaml"
           kubectl apply -f "$MANIFEST_BASE/global-gateway.yaml"
           export GATEWAY_EXTERNAL_IP="${{ vars.GATEWAY_EXTERNAL_IP }}"
           tmp_gateway_svc="$(mktemp)"
