--- a/k8s-1.35-manifests/monitoring-staging__grafana-pvc.yaml
+++ b/k8s-1.35-manifests/monitoring-staging__grafana-pvc.yaml
@@ -2,13 +2,12 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: grafana-pvc
-  namespace: monitoring
+  namespace: monitoring-staging
 spec:
   accessModes:
-    - ReadWriteOnce
+  - ReadWriteOnce
   resources:
     requests:
       storage: 5Gi
   storageClassName: local-path
   volumeMode: Filesystem
-
