--- a/k8s-1.35-manifests/monitoring-production__prometheus-pvc.yaml
+++ b/k8s-1.35-manifests/monitoring-production__prometheus-pvc.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: prometheus-pvc
-  namespace: monitoring
+  namespace: monitoring-production
 spec:
   accessModes:
-    - ReadWriteOnce
+  - ReadWriteOnce
   resources:
     requests:
       storage: 20Gi
