wire in grafana staging

--- a/k8s-1.35-manifests/certificates-production.yaml
+++ b/k8s-1.35-manifests/certificates-production.yaml
@@ -25,3 +25,17 @@ spec:
     name: letsencrypt-gateway
   dnsNames:
   - quiz.dremer10.com
+
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: grafana-cert
+  namespace: nginx-gateway
+spec:
+  secretName: grafana-tls
+  issuerRef:
+    kind: ClusterIssuer
+    name: letsencrypt-gateway
+  dnsNames:
+  - grafana.devops-toolkit.dremer10.com
