--- a/k8s-1.35-manifests/certificates-staging.yaml
+++ b/k8s-1.35-manifests/certificates-staging.yaml
@@ -25,3 +25,17 @@ spec:
     name: letsencrypt-gateway
   dnsNames:
   - quiz-staging.dremer10.com
+
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: grafana-staging-cert
+  namespace: nginx-gateway
+spec:
+  secretName: grafana-staging-tls
+  issuerRef:
+    kind: ClusterIssuer
+    name: letsencrypt-gateway
+  dnsNames:
+  - grafana-staging.devops-toolkit.dremer10.com
