--- a/k8s-1.35-manifests/monitoring-production.yaml
+++ b/k8s-1.35-manifests/monitoring-production.yaml
@@ -501,6 +501,10 @@ spec:
         env:
         - name: GF_FEATURE_TOGGLES_ENABLE
           value: publicDashboards
+        - name: GF_SERVER_ROOT_URL
+          value: https://grafana.devops-toolkit.dremer10.com
+        - name: GF_SERVER_DOMAIN
+          value: grafana.devops-toolkit.dremer10.com
         - name: GF_SECURITY_ADMIN_USER
           valueFrom:
             secretKeyRef:
